objects/Genesys_Product_Relationship__c.object
<CustomObject>
    <description>Holds the successor and predecessor linkage between two Genesys Products.</description>
    <fields>
        <fullName>Predecessor_Descr__c</fullName>
        <formula>IF(ISBLANK(Predecessor_Name__c), Predecessor_Part_Number__c, Predecessor_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Predecessor Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor_Name__c</fullName>
        <formula>Predecessor__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Predecessor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor_Part_Number__c</fullName>
        <formula>Predecessor__r.APN_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Predecessor Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Predecessor</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Relationships (Successors)</relationshipLabel>
        <relationshipName>Product_Relationships_Pred</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Successor_Descr__c</fullName>
        <formula>IF(ISBLANK(Successor_Name__c), Successor_Part_Number__c, Successor_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Successor Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Successor_Name__c</fullName>
        <formula>Successor__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Successor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Successor_Part_Number__c</fullName>
        <formula>Successor__r.APN_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Successor Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Successor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Successor</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Relationships (Predecessors)</relationshipLabel>
        <relationshipName>Product_Relationships_Succ</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Relationship</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>